--- a/untuk naell/index.html
+++ b/untuk naell/index.html
@@ -19,8 +19,10 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `hehehe haloo naell ashaa minta maaf
+      ashaa tau kok naell pasti marah kan tadii.maafin juga tadi kalau naell denger asha ngomong kasar.
+      `;
+      musik = `musik.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
