--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `hehe hallo naell asha minta maaf ya, kitaa baikan yaa nael jangan marah lagii`;
+      musik = `musik.mp3`;
       nomorWhatsapp = ``;
-      idTelegram = ``;
+      idTelegram = `@shaaa2509`;
 
       DekaTutorial(ucapan, musik, nomorWhatsapp, idTelegram);
     </script>
