--- a/untukmu/index.html
+++ b/untukmu/index.html
@@ -19,10 +19,10 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `hallo nael maafin asha ya, asha tau nael marahh. jadi kitaa baikan yaa`;
+      musik = `musik.mp3`;
       nomorWhatsapp = ``;
-      idTelegram = ``;
+      idTelegram = `@shaaa2509`;
 
       DekaTutorial(ucapan, musik, nomorWhatsapp, idTelegram);
     </script>
